docs: Update unique capture rule with global species clause

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                 <h3 style="margin-top: 20px;">Règles Fondamentales (Nuzlocke)</h3>
                 <ul style="list-style-type: disc; padding-left: 20px;">
-                    <li><strong>Capture unique :</strong> Vous ne pouvez capturer que le premier Pokémon rencontré dans chaque nouvelle zone (route, grotte, etc.).</li>
+                    <li><strong>Capture unique :</strong> Vous ne pouvez capturer que le premier Pokémon rencontré dans chaque nouvelle zone. De plus, une espèce de Pokémon (et sa famille évolutive) ne peut être capturée qu'<strong>une seule fois</strong> sur l'ensemble du GenLocke.</li>
                     <li><strong>Mort permanente :</strong> Si un Pokémon est mis K.O., il est considéré comme "mort" et doit être relâché ou placé dans une boîte "Cimetière" pour ne plus jamais être utilisé.</li>
                     <li><strong>Surnoms obligatoires :</strong> Vous devez donner un surnom à chaque Pokémon capturé pour renforcer le lien émotionnel.</li>
                 </ul>
