docs: Add Level Cap and Item Clause rules

--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
                 <ul style="list-style-type: disc; padding-left: 20px;">
                     <li><strong>Clause du Duplicata :</strong> Si votre première rencontre dans une zone est un Pokémon que vous avez déjà capturé (ou un membre de sa famille évolutive), vous pouvez ignorer cette rencontre et chercher jusqu'à en trouver un nouveau.</li>
                     <li><strong>Clause du Shiny :</strong> Si vous rencontrez un Pokémon chromatique (shiny), vous êtes autorisé à le capturer, même si ce n'est pas votre première rencontre dans la zone.</li>
+                    <li><strong>Plafond de Niveau (Level Cap) :</strong> Pour un combat de Champion d'Arène ou de Maître de la Ligue, aucun de vos Pokémon ne peut avoir un niveau supérieur à celui du Pokémon le plus fort de l'adversaire.</li>
+                    <li><strong>Clause des Objets :</strong> L'utilisation d'objets de soin en combat (comme les Potions) est interdite, à moins qu'un dresseur adverse n'en utilise un en premier. Les objets de guérison de statut restent autorisés.</li>
                 </ul>
             </div>
         </div>
